@@ -2,6 +2,7 @@ Overview of changes in lightdm 1.3.1
 
     * Fix wrapper path in AppArmor profile (broken since 1.1.1)
     * Add show-manual-login and allow-guest options to lightdm-set-defaults
+    * Don't set PAM_XDISPLAY or PAM_XAUTHDATA if not supported
 
 Overview of changes in lightdm 1.2.0
 
